<resources>
    <string name="app_name">DogBreed</string>
    <string name="about_us">About Us ?</string>
    <string name="scan">Scan</string>
    <string name="explore">explore</string>
    <string name="need_help">need help ?</string>
    <string name="tips">Tips: You should crop the dog face for scanning to get more accurate result</string>
    <string name="share">share</string>
    <string name="unable_to_find">Unable to find</string>
    <string name="try_again">Please try again by focusing on dog face</string>
    <string name="more_information">More information about dog can be found in Explore</string>
    <string name="result_1">Your dog looks like</string>
    <string name="result_2">% similar to </string>
    <string name="information">More information about DogBreed </string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="option">Select Option</string>
    <string name="save">Save</string>
    <string name="your_dog_looks">Your dog looks like</string>
    <string name="bmi">Calculating BMI for your dog:</string>
    <string name="bmi_explain">To determine your dog BMI, you will need to enter their breed, sex, weight and height below. Click calculate to receive your dog\'s BMI results.</string>
    <string name="select_a_breed">Select a breed:</string>
    <string name="sex">Sex:</string>
    <string name="weight">Weight:</string>
    <string name="select_unit_in_the_drop_down">Select unit in the drop down</string>
    <string name="height_measured_to_shoulder">Height (Measured to shoulder):</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="underweight"> Under Weight </string>
    <string name="over_weight"> Over Weight </string>
    <string name="correct_weight"> Correct Weight </string>
    <string name="ideal_bmi">Ideal BMI Scores for a</string>
    <string name="enter_height">You entered height as</string>
    <string name="you_entered_weight_as">You entered weight as</string>
    <string name="your_dog_can_be_overweight">YOUR DOG CAN BE OVERWEIGHT</string>
    <string name="bmi_calcultated">Your dog BMI is calculated as </string>
    <string name="under_weight">Your dog is under weight</string>
    <string name="good_weight">Your dog is at a good weight</string>
    <string name="b">Below</string>
    <string name="o">Over</string>
    <string name="between">Between</string>
    <string name="and">and</string>
    <string name="recalculate">Recalculate</string>
    <string name="enter_weight">Please enter the correct weight</string>
    <string name="e_height">Please enter the correct height</string>
</resources>