<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="10dp"
        android:text="@string/about_us"
        style="?android:attr/borderlessButtonStyle"
        android:textAlignment="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView">

    </Button>

    <Button
        android:id="@+id/btnScan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:shadowRadius="1"
        android:text="@string/scan"
        android:textColor="@color/white"
        app:layout_constraintCircleRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAboutUs" />

    <Button
        android:id="@+id/btnExplore"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/explore"
        android:textColor="@color/white"
        app:layout_constraintCircleRadius="2dp"
        android:shadowRadius="1"
        app:layout_constraintEnd_toEndOf="@+id/btnScan"
        app:layout_constraintStart_toStartOf="@+id/btnScan"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />

    <Button
        android:id="@+id/helpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/need_help"
        style="?android:attr/borderlessButtonStyle"
        android:textAlignment="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>