<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/bmiImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/n"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/bmiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bmi_calcultated"
                app:layout_constraintEnd_toEndOf="@+id/bmiImage"
                app:layout_constraintStart_toStartOf="@+id/bmiImage"
                app:layout_constraintTop_toBottomOf="@+id/bmiImage" />

            <TextView
                android:id="@+id/resultBMITextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="#EAE3E3"
                android:gravity="center"
                android:text="@string/your_dog_can_be_overweight"
                android:textAlignment="center"
                android:textColor="#589C96"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bmiTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/inputTextView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/you_entered_weight_as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/inputTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_height"
        app:layout_constraintEnd_toEndOf="@+id/inputTextView1"
        app:layout_constraintStart_toStartOf="@+id/inputTextView1"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ideaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/ideal_bmi"
                app:layout_constraintEnd_toEndOf="@+id/tableLayout"
                app:layout_constraintStart_toStartOf="@+id/tableLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ideaTextView">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/male"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/female"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/underweight"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/uTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text=" Below 50"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/uTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="Below 50"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </TableRow>


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/correct_weight"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/cTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="  Between 50 and 80  "
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/cTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="  Between 50 and 80  "
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/over_weight"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/upTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text=" Upper 80 "
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/upTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text=" Upper 80 "
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/recalculate"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <Button
        android:id="@+id/xButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="X"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnRecalculate"
        app:layout_constraintStart_toStartOf="@+id/btnRecalculate"
        app:layout_constraintTop_toBottomOf="@+id/btnRecalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>